<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="EmployeeListFragment">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/spacing_xsmall"/>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/add_cv"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="60dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:elevation="4dp"
        android:theme="@style/CardView.Light"
        android:visibility="invisible"
        card_view:cardCornerRadius="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/add_employee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/add_new_emp"
                android:textAppearance="@android:style/TextAppearance.Material.Display1"
                android:textColor="@color/primaryDarkColor"/>

            <EditText
                android:id="@+id/employee_edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/add_employee"
                android:layout_below="@+id/add_employee"
                android:layout_marginTop="10dp"
                android:hint="@string/add_employee_name_hint"
                android:textColor="@color/primaryDarkColor"
                android:textColorHint="@color/primaryLightColor" />

            <EditText
                android:id="@+id/employee_edit_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/add_employee"
                android:layout_below="@+id/employee_edit_name"
                android:layout_marginTop="10dp"
                android:hint="@string/add_employee_id_hint"
                android:inputType="number"
                android:textColor="@color/primaryDarkColor"
                android:textColorHint="@color/primaryLightColor" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                android:textColor="@color/textTitleColor"
                android:id="@+id/add_cv_add_b"
                android:layout_below="@+id/employee_edit_id"
                android:layout_alignStart="@+id/employee_edit_id"
                android:layout_marginBottom="15dp"
                android:stateListAnimator="@anim/floating_button_elevate"
                android:background="@color/primaryDarkColor"/>

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <ImageButton
        android:id="@+id/floatAddImgBtn"
        android:layout_width="@dimen/floating_button_size"
        android:layout_height="@dimen/floating_button_size"
        android:layout_gravity="right|bottom"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/float_ripple"
        android:contentDescription="@string/float_description"
        android:onClick="onFloatAddEmployeeButtonClicked"
        android:scaleType="center"
        android:src="@drawable/add" />

</FrameLayout>